// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loadChartData > All Studies (json/baseline_experiments) > matches the golden snapshot 1`] = `
{
  "anatomogramConfig": {
    "anatomogramData": {
      "allSvgPathIds": [
        "PO_0009089",
        "PO_0009084",
        "PO_0009009",
        "PO_0025281",
        "PO_0009049",
        "PO_0025034",
        "PO_0009005",
        "PO_0009006",
        "UBERON_0000468",
        "PO_0020103",
        "PO_0000034",
        "PO_0000229",
        "PO_0009046",
        "PO_0009010",
        "PO_0009051",
        "PO_0009047",
        "PO_0009030",
        "PO_0009066",
      ],
      "species": "sorghum_bicolor",
    },
    "atlasUrl": "https://data.sorghumbase.org/auth_testing/gxa/",
    "expressedTissueColour": "red",
    "hoveredTissueColour": "purple",
    "show": true,
  },
  "colourAxis": null,
  "columnGroups": {
    "categories": [
      {
        "disabled": false,
        "name": "All",
      },
      {
        "disabled": false,
        "name": "None",
      },
    ],
    "categoryCheckboxes": [
      {
        "disabled": true,
        "name": "High",
      },
      {
        "disabled": false,
        "name": "Medium",
      },
      {
        "disabled": false,
        "name": "Low",
      },
      {
        "disabled": true,
        "name": "Below cutoff",
      },
    ],
    "data": [
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "anther",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "early inflorescence",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "emerging inflorescence",
      },
      {
        "categories": [
          "All",
          "Low",
          "Medium",
        ],
        "groupings": [],
        "value": "endosperm",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "flag leaf",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "floral meristem",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "flower",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "inflorescence",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "leaf",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "nonvascular system",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "pericarp",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "pistil",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "plant embryo",
      },
      {
        "categories": [
          "All",
          "Low",
        ],
        "groupings": [],
        "value": "pollen",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "root",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "seed",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "seed 10 days after pollination",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "seed 5 days after pollination",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "shoot",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "spikelet",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "stem",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "vascular system",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "vegetative meristem",
      },
      {
        "categories": [
          "All",
          "Medium",
        ],
        "groupings": [],
        "value": "whole organism",
      },
    ],
    "groupingNames": [],
  },
  "geneSpecificResults": null,
  "heatmapConfig": {
    "atlasUrl": "https://data.sorghumbase.org/auth_testing/gxa/",
    "coexpressionsAvailable": false,
    "description": [
      "Query results for: [null], in conditions [], in species Sorghum bicolor",
    ],
    "disclaimer": "",
    "experiment": undefined,
    "genomeBrowsers": [],
    "inProxy": "",
    "introductoryMessage": "Showing 9 experiments:",
    "isBaseline": false,
    "isDifferential": false,
    "isMultiExperiment": true,
    "isWidget": true,
    "linkTarget": "_blank",
    "outProxy": "",
    "shortDescription": "expression_atlas-sorghum_bicolor",
    "showControlMenu": true,
    "urlFor": [Function],
    "xAxisLegendName": "Experimental condition",
    "yAxisLegendName": "Experiment",
  },
  "heatmapData": {
    "dataSeries": [
      {
        "data": [],
        "info": {
          "colour": "#eaeaea",
          "name": "Below cutoff",
        },
      },
      {
        "data": [
          {
            "info": {
              "description": "Wang et al., 2018 - Organism part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 9,
            "x": 3,
            "y": 5,
          },
          {
            "info": {
              "description": "Wang et al., 2018 - Organism part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 1,
            "x": 13,
            "y": 5,
          },
        ],
        "info": {
          "colour": "#45affd",
          "name": "Low",
        },
      },
      {
        "data": [
          {
            "info": {
              "description": "Turco et al 2017 - Organism Part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 45,
            "x": 9,
            "y": 0,
          },
          {
            "info": {
              "description": "Turco et al 2017 - Organism Part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 74,
            "x": 14,
            "y": 0,
          },
          {
            "info": {
              "description": "Turco et al 2017 - Organism Part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 63,
            "x": 18,
            "y": 0,
          },
          {
            "info": {
              "description": "Turco et al 2017 - Organism Part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 30,
            "x": 21,
            "y": 0,
          },
          {
            "info": {
              "description": "Tissues - Olson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 51,
            "x": 5,
            "y": 1,
          },
          {
            "info": {
              "description": "Tissues - Olson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 39,
            "x": 6,
            "y": 1,
          },
          {
            "info": {
              "description": "Tissues - Olson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 26,
            "x": 12,
            "y": 1,
          },
          {
            "info": {
              "description": "Tissues - Olson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 66,
            "x": 14,
            "y": 1,
          },
          {
            "info": {
              "description": "Tissues - Olson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 29,
            "x": 18,
            "y": 1,
          },
          {
            "info": {
              "description": "Tissues - Olson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 51,
            "x": 22,
            "y": 1,
          },
          {
            "info": {
              "description": "Thurber et al., 2015 - Organism part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 39,
            "x": 4,
            "y": 2,
          },
          {
            "info": {
              "description": "Thurber et al., 2015 - Organism part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 57,
            "x": 7,
            "y": 2,
          },
          {
            "info": {
              "description": "Tissues - 3 Makita et al.",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 22,
            "x": 15,
            "y": 3,
          },
          {
            "info": {
              "description": "Tissues - 3 Makita et al.",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 36,
            "x": 19,
            "y": 3,
          },
          {
            "info": {
              "description": "Tissues - 3 Makita et al.",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 59,
            "x": 20,
            "y": 3,
          },
          {
            "info": {
              "description": "Tissues - Davidson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 12,
            "x": 0,
            "y": 4,
          },
          {
            "info": {
              "description": "Tissues - Davidson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 48,
            "x": 1,
            "y": 4,
          },
          {
            "info": {
              "description": "Tissues - Davidson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 55,
            "x": 2,
            "y": 4,
          },
          {
            "info": {
              "description": "Tissues - Davidson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 11,
            "x": 3,
            "y": 4,
          },
          {
            "info": {
              "description": "Tissues - Davidson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 24,
            "x": 8,
            "y": 4,
          },
          {
            "info": {
              "description": "Tissues - Davidson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 44,
            "x": 11,
            "y": 4,
          },
          {
            "info": {
              "description": "Tissues - Davidson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 29,
            "x": 12,
            "y": 4,
          },
          {
            "info": {
              "description": "Tissues - Davidson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 11,
            "x": 16,
            "y": 4,
          },
          {
            "info": {
              "description": "Tissues - Davidson et al",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 41,
            "x": 17,
            "y": 4,
          },
          {
            "info": {
              "description": "Wang et al., 2018 - Organism part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 54,
            "x": 8,
            "y": 5,
          },
          {
            "info": {
              "description": "Wang et al., 2018 - Organism part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 53,
            "x": 10,
            "y": 5,
          },
          {
            "info": {
              "description": "Wang et al., 2018 - Organism part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 38,
            "x": 12,
            "y": 5,
          },
          {
            "info": {
              "description": "Wang et al., 2018 - Organism part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 76,
            "x": 14,
            "y": 5,
          },
          {
            "info": {
              "description": "Wang et al., 2018 - Organism part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 38,
            "x": 18,
            "y": 5,
          },
          {
            "info": {
              "description": "Wang et al., 2018 - Organism part",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 47,
            "x": 23,
            "y": 5,
          },
          {
            "info": {
              "description": "Wang et al., 2018 - Organism part - inflorescence size 1 to 10 millimeter",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 39,
            "x": 7,
            "y": 6,
          },
          {
            "info": {
              "description": "Wang et al., 2018 - Organism part - inflorescence size 1 to 2 centimeter",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 35,
            "x": 7,
            "y": 7,
          },
          {
            "info": {
              "description": "Wang et al., 2018 - Organism part - inflorescence size 1 to 5 millimeter",
              "type": "RNASEQ_MRNA_BASELINE",
              "unit": "TPM",
            },
            "value": 35,
            "x": 7,
            "y": 8,
          },
        ],
        "info": {
          "colour": "#1E74CA",
          "name": "Medium",
        },
      },
      {
        "data": [],
        "info": {
          "colour": "#024990",
          "name": "High",
        },
      },
    ],
    "xAxisCategories": [
      {
        "id": "PO_0009066",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "anther",
      },
      {
        "id": "PO_0009049",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "early inflorescence",
      },
      {
        "id": "PO_0009049",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "emerging inflorescence",
      },
      {
        "id": "PO_0009089",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "endosperm",
      },
      {
        "id": "PO_0020103",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "flag leaf",
      },
      {
        "id": "PO_0000229",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "floral meristem",
      },
      {
        "id": "PO_0009046",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "flower",
      },
      {
        "id": "PO_0009049",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "inflorescence",
      },
      {
        "id": "PO_0025034",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "leaf",
      },
      {
        "id": "",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "nonvascular system",
      },
      {
        "id": "PO_0009084",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "pericarp",
      },
      {
        "id": "PO_0009030",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "pistil",
      },
      {
        "id": "PO_0009009",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "plant embryo",
      },
      {
        "id": "PO_0025281",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "pollen",
      },
      {
        "id": "PO_0009005",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "root",
      },
      {
        "id": "PO_0009010",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "seed",
      },
      {
        "id": "PO_0009010",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "seed 10 days after pollination",
      },
      {
        "id": "PO_0009010",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "seed 5 days after pollination",
      },
      {
        "id": "PO_0009006",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "shoot",
      },
      {
        "id": "PO_0009051",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "spikelet",
      },
      {
        "id": "PO_0009047",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "stem",
      },
      {
        "id": "PO_0000034",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "vascular system",
      },
      {
        "id": "",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "vegetative meristem",
      },
      {
        "id": "UBERON_0000468",
        "info": {
          "tooltip": {},
          "trackId": "",
        },
        "label": "whole organism",
      },
    ],
    "yAxisCategories": [
      {
        "id": "E-CURD-25",
        "info": {
          "designElement": "",
          "experimentType": "RNASEQ_MRNA_BASELINE",
          "trackId": "E-CURD-25",
          "uri": "https://www.ebi.ac.uk/gxa/experiments/E-CURD-25?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
          "url": "https://www.ebi.ac.uk/gxa/experiments/E-CURD-25?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
        },
        "label": "Turco et al 2017 - Organism Part",
      },
      {
        "id": "E-MTAB-3839",
        "info": {
          "designElement": "",
          "experimentType": "RNASEQ_MRNA_BASELINE",
          "trackId": "E-MTAB-3839",
          "uri": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-3839?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
          "url": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-3839?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
        },
        "label": "Tissues - Olson et al",
      },
      {
        "id": "E-MTAB-4203",
        "info": {
          "designElement": "",
          "experimentType": "RNASEQ_MRNA_BASELINE",
          "trackId": "E-MTAB-4203",
          "uri": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-4203?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
          "url": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-4203?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
        },
        "label": "Thurber et al., 2015 - Organism part",
      },
      {
        "id": "E-MTAB-4273",
        "info": {
          "designElement": "",
          "experimentType": "RNASEQ_MRNA_BASELINE",
          "trackId": "E-MTAB-4273",
          "uri": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-4273?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
          "url": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-4273?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
        },
        "label": "Tissues - 3 Makita et al.",
      },
      {
        "id": "E-MTAB-4400",
        "info": {
          "designElement": "",
          "experimentType": "RNASEQ_MRNA_BASELINE",
          "trackId": "E-MTAB-4400",
          "uri": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-4400?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
          "url": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-4400?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
        },
        "label": "Tissues - Davidson et al",
      },
      {
        "id": "E-MTAB-5956",
        "info": {
          "designElement": "",
          "experimentType": "RNASEQ_MRNA_BASELINE",
          "trackId": "E-MTAB-5956",
          "uri": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-5956?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
          "url": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-5956?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
        },
        "label": "Wang et al., 2018 - Organism part",
      },
      {
        "id": "Wang et al., 2018 - Organism part - inflorescence size 1 to 10 millimeter",
        "info": {
          "designElement": "",
          "experimentType": "RNASEQ_MRNA_BASELINE",
          "trackId": "Wang et al., 2018 - Organism part - inflorescence size 1 to 10 millimeter",
          "uri": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-5956?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
          "url": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-5956?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
        },
        "label": "Wang et al., 2018 - Organism part - inflorescence size 1 to 10 millimeter",
      },
      {
        "id": "Wang et al., 2018 - Organism part - inflorescence size 1 to 2 centimeter",
        "info": {
          "designElement": "",
          "experimentType": "RNASEQ_MRNA_BASELINE",
          "trackId": "Wang et al., 2018 - Organism part - inflorescence size 1 to 2 centimeter",
          "uri": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-5956?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
          "url": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-5956?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
        },
        "label": "Wang et al., 2018 - Organism part - inflorescence size 1 to 2 centimeter",
      },
      {
        "id": "Wang et al., 2018 - Organism part - inflorescence size 1 to 5 millimeter",
        "info": {
          "designElement": "",
          "experimentType": "RNASEQ_MRNA_BASELINE",
          "trackId": "Wang et al., 2018 - Organism part - inflorescence size 1 to 5 millimeter",
          "uri": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-5956?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
          "url": "https://www.ebi.ac.uk/gxa/experiments/E-MTAB-5956?geneQuery=%5B%7B%22value%22%3A%22SORBI_3001G000200%22%7D%5D",
        },
        "label": "Wang et al., 2018 - Organism part - inflorescence size 1 to 5 millimeter",
      },
    ],
  },
  "orderings": [
    {
      "columns": [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        18,
        19,
        20,
        21,
        22,
        23,
      ],
      "name": "By experiment type",
      "rows": [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
    },
    {
      "columns": [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        18,
        19,
        20,
        21,
        22,
        23,
      ],
      "name": "Alphabetical order",
      "rows": [
        2,
        3,
        4,
        1,
        0,
        5,
        6,
        7,
        8,
      ],
    },
    {
      "columns": [
        14,
        7,
        20,
        2,
        5,
        22,
        4,
        19,
        1,
        9,
        6,
        15,
        11,
        10,
        18,
        21,
        8,
        17,
        23,
        12,
        0,
        3,
        13,
        16,
      ],
      "name": "Expression rank",
      "rows": [
        2,
        3,
        4,
        0,
        5,
        1,
        6,
        7,
        8,
      ],
    },
  ],
}
`;

exports[`loadChartData > Paralogs baseline (E-CURD-25) > matches the golden snapshot 1`] = `
{
  "anatomogramConfig": {
    "anatomogramData": {
      "allSvgPathIds": [
        "PO_0009006",
        "PO_0009005",
        "PO_0000034",
      ],
      "species": "Sorghum bicolor",
    },
    "atlasUrl": "https://data.sorghumbase.org/auth_testing/gxa/",
    "expressedTissueColour": "gray",
    "hoveredTissueColour": "red",
    "show": false,
  },
  "colourAxis": {
    "dataClasses": [
      {
        "color": "#E3F2FD",
        "from": 0.7,
        "to": 0.7,
      },
      {
        "color": "#90CAF9",
        "from": 9,
        "to": 9,
      },
      {
        "color": "#42A5F5",
        "from": 19,
        "to": 25,
      },
      {
        "color": "#2382DB",
        "from": 30,
        "to": 63,
      },
      {
        "color": "#0D59A4",
        "from": 63,
        "to": 74,
      },
    ],
    "unit": "TPM",
  },
  "columnGroups": {
    "categories": [
      {
        "disabled": false,
        "name": "All",
      },
      {
        "disabled": false,
        "name": "None",
      },
    ],
    "categoryCheckboxes": [
      {
        "disabled": true,
        "name": "High",
      },
      {
        "disabled": false,
        "name": "Medium-High",
      },
      {
        "disabled": false,
        "name": "Medium",
      },
      {
        "disabled": false,
        "name": "Low-Medium",
      },
      {
        "disabled": false,
        "name": "Low",
      },
    ],
    "data": [
      {
        "categories": [
          "All",
          "Low-Medium",
          "Medium-High",
        ],
        "groupings": [],
        "value": "nonvascular system",
      },
      {
        "categories": [
          "All",
          "Low",
          "Medium",
          "Medium-High",
        ],
        "groupings": [],
        "value": "root",
      },
      {
        "categories": [
          "All",
          "Medium",
          "Medium-High",
        ],
        "groupings": [],
        "value": "shoot",
      },
      {
        "categories": [
          "All",
          "Low-Medium",
          "Medium-High",
        ],
        "groupings": [],
        "value": "vascular system",
      },
    ],
    "groupingNames": [],
  },
  "geneSpecificResults": null,
  "heatmapConfig": {
    "atlasUrl": "https://data.sorghumbase.org/auth_testing/gxa/",
    "coexpressionsAvailable": false,
    "description": [
      "Experiment accession: E-CURD-25",
      "Gene Expression Regulation Associated with Vascularization in Sorghum bicolor",
      "Gene query: [null,null,null]",
    ],
    "disclaimer": "",
    "experiment": {
      "accession": "E-CURD-25",
      "description": "Gene Expression Regulation Associated with Vascularization in Sorghum bicolor",
      "species": "Sorghum bicolor",
      "type": "rnaseq_mrna_baseline",
      "urls": {
        "download": "https://www.ebi.ac.uk/gxa/experiments-content/E-CURD-25/download/RNASEQ_MRNA_BASELINE?unit=TPM&cutoff=0.5&heatmapMatrixSize=50&selectedColumnIds=&type=RNASEQ_MRNA_BASELINE&geneQuery=%5Bnull%2Cnull%2Cnull%5D",
        "genome_browsers": "https://www.ebi.ac.uk/gxa/experiments/E-CURD-25/redirect/genome-browsers",
        "main_page": "https://www.ebi.ac.uk/gxa/experiments/E-CURD-25?geneQuery=%5Bnull%2Cnull%2Cnull%5D",
      },
    },
    "genomeBrowsers": [],
    "inProxy": "",
    "introductoryMessage": "Showing 3 genes:",
    "isBaseline": true,
    "isDifferential": false,
    "isMultiExperiment": false,
    "isWidget": true,
    "linkTarget": "_blank",
    "outProxy": "",
    "shortDescription": "E-CURD-25",
    "showControlMenu": true,
    "urlFor": [Function],
    "xAxisLegendName": "Experimental condition",
    "yAxisLegendName": "Gene name",
  },
  "heatmapData": {
    "dataSeries": [
      {
        "data": [
          {
            "info": {
              "unit": "TPM",
            },
            "value": 0.7,
            "x": 1,
            "y": 2,
          },
        ],
        "info": {
          "colour": "#e3f2fd",
          "name": "Low",
          "thresholds": [],
        },
      },
      {
        "data": [
          {
            "info": {
              "unit": "TPM",
            },
            "value": 9,
            "x": 0,
            "y": 1,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 9,
            "x": 3,
            "y": 1,
          },
        ],
        "info": {
          "colour": "#90caf9",
          "name": "Low-Medium",
          "thresholds": [],
        },
      },
      {
        "data": [
          {
            "info": {
              "unit": "TPM",
            },
            "value": 25,
            "x": 1,
            "y": 1,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 19,
            "x": 2,
            "y": 1,
          },
        ],
        "info": {
          "colour": "#42a5f5",
          "name": "Medium",
          "thresholds": [],
        },
      },
      {
        "data": [
          {
            "info": {
              "unit": "TPM",
            },
            "value": 45,
            "x": 0,
            "y": 0,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 74,
            "x": 1,
            "y": 0,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 63,
            "x": 2,
            "y": 0,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 30,
            "x": 3,
            "y": 0,
          },
        ],
        "info": {
          "colour": "#1976d2",
          "name": "Medium-High",
          "thresholds": [],
        },
      },
      {
        "data": [],
        "info": {
          "colour": "#0d47a1",
          "name": "High",
          "thresholds": [],
        },
      },
    ],
    "xAxisCategories": [
      {
        "id": "",
        "info": {
          "tooltip": {
            "properties": [
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "cultivar",
                "testValue": "BTx623",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism",
                "testValue": "Sorghum bicolor",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "organism part",
                "testValue": "nonvascular system",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "age",
                "testValue": "3 day",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "genotype",
                "testValue": "wild type genotype",
              },
            ],
            "replicates": 2,
          },
          "trackId": "g1",
        },
        "label": "nonvascular system",
      },
      {
        "id": "PO_0009005",
        "info": {
          "tooltip": {
            "properties": [
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "cultivar",
                "testValue": "BTx623",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism",
                "testValue": "Sorghum bicolor",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "organism part",
                "testValue": "root",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "age",
                "testValue": "3 day",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "genotype",
                "testValue": "wild type genotype",
              },
            ],
            "replicates": 2,
          },
          "trackId": "g2",
        },
        "label": "root",
      },
      {
        "id": "PO_0009006",
        "info": {
          "tooltip": {
            "properties": [
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "cultivar",
                "testValue": "BTx623",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism",
                "testValue": "Sorghum bicolor",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "organism part",
                "testValue": "shoot",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "age",
                "testValue": "3 day",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "genotype",
                "testValue": "wild type genotype",
              },
            ],
            "replicates": 2,
          },
          "trackId": "g3",
        },
        "label": "shoot",
      },
      {
        "id": "PO_0000034",
        "info": {
          "tooltip": {
            "properties": [
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "cultivar",
                "testValue": "BTx623",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism",
                "testValue": "Sorghum bicolor",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "organism part",
                "testValue": "vascular system",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "age",
                "testValue": "3 day",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "genotype",
                "testValue": "wild type genotype",
              },
            ],
            "replicates": 2,
          },
          "trackId": "g4",
        },
        "label": "vascular system",
      },
    ],
    "yAxisCategories": [
      {
        "id": "SORBI_3001G000200",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3001G000200",
          "uri": "genes/SORBI_3001G000200",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3001G000200",
        },
        "label": "SORBI_3001G000200",
      },
      {
        "id": "SORBI_3001G000400",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3001G000400",
          "uri": "genes/SORBI_3001G000400",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3001G000400",
        },
        "label": "SORBI_3001G000400",
      },
      {
        "id": "SORBI_3001G000100",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3001G000100",
          "uri": "genes/SORBI_3001G000100",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3001G000100",
        },
        "label": "SORBI_3001G000100",
      },
    ],
  },
  "orderings": [
    {
      "columns": [
        0,
        1,
        2,
        3,
      ],
      "name": "Default",
      "rows": [
        0,
        1,
        2,
      ],
    },
  ],
}
`;

exports[`loadChartData > Paralogs baseline without an anatomogram (E-GEOD-167101) > matches the golden snapshot 1`] = `
{
  "anatomogramConfig": {
    "anatomogramData": undefined,
    "atlasUrl": "https://data.sorghumbase.org/auth_testing/gxa/",
    "expressedTissueColour": "gray",
    "hoveredTissueColour": "red",
    "show": false,
  },
  "colourAxis": {
    "dataClasses": [
      {
        "color": "#F8FCFF",
        "from": 0.5,
        "to": 0.6,
      },
      {
        "color": "#EEF7FE",
        "from": 0.6,
        "to": 0.6,
      },
      {
        "color": "#E7F4FD",
        "from": 0.6,
        "to": 0.7,
      },
      {
        "color": "#D9EDFD",
        "from": 0.7,
        "to": 2,
      },
      {
        "color": "#C4E3FC",
        "from": 2,
        "to": 2,
      },
      {
        "color": "#AFD9FB",
        "from": 3,
        "to": 4,
      },
      {
        "color": "#9ACFFA",
        "from": 4,
        "to": 6,
      },
      {
        "color": "#8BC8F9",
        "from": 6,
        "to": 6,
      },
      {
        "color": "#81C3F8",
        "from": 6,
        "to": 8,
      },
      {
        "color": "#78BEF8",
        "from": 8,
        "to": 9,
      },
      {
        "color": "#6EBAF7",
        "from": 9,
        "to": 9,
      },
      {
        "color": "#64B5F7",
        "from": 10,
        "to": 11,
      },
      {
        "color": "#5AB1F6",
        "from": 11,
        "to": 12,
      },
      {
        "color": "#51ACF6",
        "from": 12,
        "to": 13,
      },
      {
        "color": "#47A7F5",
        "from": 13,
        "to": 14,
      },
      {
        "color": "#3FA2F3",
        "from": 14,
        "to": 18,
      },
      {
        "color": "#3A9CEE",
        "from": 18,
        "to": 19,
      },
      {
        "color": "#3596EA",
        "from": 19,
        "to": 21,
      },
      {
        "color": "#3090E6",
        "from": 21,
        "to": 23,
      },
      {
        "color": "#2382DB",
        "from": 42,
        "to": 48,
      },
      {
        "color": "#0D59A4",
        "from": 48,
        "to": 73,
      },
    ],
    "unit": "TPM",
  },
  "columnGroups": {
    "categories": [
      {
        "disabled": false,
        "name": "All",
      },
      {
        "disabled": false,
        "name": "None",
      },
    ],
    "categoryCheckboxes": [
      {
        "disabled": true,
        "name": "High",
      },
      {
        "disabled": false,
        "name": "Medium-High",
      },
      {
        "disabled": false,
        "name": "Medium",
      },
      {
        "disabled": false,
        "name": "Low-Medium",
      },
      {
        "disabled": false,
        "name": "Low",
      },
    ],
    "data": [
      {
        "categories": [
          "All",
          "Low",
          "Low-Medium",
          "Medium",
          "Medium-High",
        ],
        "groupings": [],
        "value": "Shanqui Red; 28 day",
      },
      {
        "categories": [
          "All",
          "Low",
          "Low-Medium",
          "Medium",
          "Medium-High",
        ],
        "groupings": [],
        "value": "Shanqui Red; 35 day",
      },
      {
        "categories": [
          "All",
          "Low",
          "Low-Medium",
          "Medium",
          "Medium-High",
        ],
        "groupings": [],
        "value": "SRN39; 28 day",
      },
      {
        "categories": [
          "All",
          "Low",
          "Low-Medium",
          "Medium",
          "Medium-High",
        ],
        "groupings": [],
        "value": "SRN39; 35 day",
      },
    ],
    "groupingNames": [],
  },
  "geneSpecificResults": null,
  "heatmapConfig": {
    "atlasUrl": "https://data.sorghumbase.org/auth_testing/gxa/",
    "coexpressionsAvailable": false,
    "description": [
      "Experiment accession: E-GEOD-167101",
      "Characterization of growth and development of sorghum genotypes with differential susceptibility to Striga hermonthica",
      "Gene query: [null,null,null,null,null,null,null,null,null,null,null,null,null,null]",
    ],
    "disclaimer": "",
    "experiment": {
      "accession": "E-GEOD-167101",
      "description": "Characterization of growth and development of sorghum genotypes with differential susceptibility to Striga hermonthica",
      "species": "Sorghum bicolor",
      "type": "rnaseq_mrna_baseline",
      "urls": {
        "download": "https://www.ebi.ac.uk/gxa/experiments-content/E-GEOD-167101/download/RNASEQ_MRNA_BASELINE?unit=TPM&cutoff=0.5&heatmapMatrixSize=50&selectedColumnIds=&type=RNASEQ_MRNA_BASELINE&geneQuery=%5Bnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%5D",
        "genome_browsers": "https://www.ebi.ac.uk/gxa/experiments/E-GEOD-167101/redirect/genome-browsers",
        "main_page": "https://www.ebi.ac.uk/gxa/experiments/E-GEOD-167101?geneQuery=%5Bnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%2Cnull%5D",
      },
    },
    "genomeBrowsers": [],
    "inProxy": "",
    "introductoryMessage": "Showing 14 genes:",
    "isBaseline": true,
    "isDifferential": false,
    "isMultiExperiment": false,
    "isWidget": true,
    "linkTarget": "_blank",
    "outProxy": "",
    "shortDescription": "E-GEOD-167101",
    "showControlMenu": true,
    "urlFor": [Function],
    "xAxisLegendName": "Experimental condition",
    "yAxisLegendName": "Gene name",
  },
  "heatmapData": {
    "dataSeries": [
      {
        "data": [
          {
            "info": {
              "unit": "TPM",
            },
            "value": 0.6,
            "x": 1,
            "y": 0,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 0.5,
            "x": 2,
            "y": 0,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 2,
            "x": 3,
            "y": 0,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 0.5,
            "x": 0,
            "y": 3,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 0.5,
            "x": 1,
            "y": 3,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 0.6,
            "x": 2,
            "y": 3,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 0.9,
            "x": 3,
            "y": 3,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 2,
            "x": 0,
            "y": 7,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 2,
            "x": 1,
            "y": 7,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 2,
            "x": 2,
            "y": 7,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 0.8,
            "x": 0,
            "y": 13,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 0.7,
            "x": 1,
            "y": 13,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 0.7,
            "x": 2,
            "y": 13,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 0.6,
            "x": 3,
            "y": 13,
          },
        ],
        "info": {
          "colour": "#e3f2fd",
          "name": "Low",
          "thresholds": [],
        },
      },
      {
        "data": [
          {
            "info": {
              "unit": "TPM",
            },
            "value": 8,
            "x": 0,
            "y": 4,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 4,
            "x": 0,
            "y": 5,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 3,
            "x": 1,
            "y": 5,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 3,
            "x": 2,
            "y": 5,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 4,
            "x": 3,
            "y": 5,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 4,
            "x": 3,
            "y": 7,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 4,
            "x": 0,
            "y": 9,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 6,
            "x": 1,
            "y": 9,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 4,
            "x": 2,
            "y": 9,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 6,
            "x": 3,
            "y": 9,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 7,
            "x": 0,
            "y": 10,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 8,
            "x": 1,
            "y": 10,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 6,
            "x": 2,
            "y": 10,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 9,
            "x": 3,
            "y": 10,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 9,
            "x": 1,
            "y": 12,
          },
        ],
        "info": {
          "colour": "#90caf9",
          "name": "Low-Medium",
          "thresholds": [],
        },
      },
      {
        "data": [
          {
            "info": {
              "unit": "TPM",
            },
            "value": 21,
            "x": 0,
            "y": 1,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 18,
            "x": 1,
            "y": 1,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 18,
            "x": 2,
            "y": 1,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 21,
            "x": 3,
            "y": 1,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 23,
            "x": 0,
            "y": 2,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 18,
            "x": 1,
            "y": 2,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 20,
            "x": 2,
            "y": 2,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 20,
            "x": 3,
            "y": 2,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 11,
            "x": 1,
            "y": 4,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 11,
            "x": 2,
            "y": 4,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 14,
            "x": 3,
            "y": 4,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 13,
            "x": 0,
            "y": 8,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 15,
            "x": 1,
            "y": 8,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 13,
            "x": 2,
            "y": 8,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 13,
            "x": 3,
            "y": 8,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 12,
            "x": 0,
            "y": 11,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 11,
            "x": 1,
            "y": 11,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 10,
            "x": 2,
            "y": 11,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 11,
            "x": 3,
            "y": 11,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 13,
            "x": 0,
            "y": 12,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 19,
            "x": 2,
            "y": 12,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 14,
            "x": 3,
            "y": 12,
          },
        ],
        "info": {
          "colour": "#42a5f5",
          "name": "Medium",
          "thresholds": [],
        },
      },
      {
        "data": [
          {
            "info": {
              "unit": "TPM",
            },
            "value": 48,
            "x": 0,
            "y": 6,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 42,
            "x": 1,
            "y": 6,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 46,
            "x": 2,
            "y": 6,
          },
          {
            "info": {
              "unit": "TPM",
            },
            "value": 73,
            "x": 3,
            "y": 6,
          },
        ],
        "info": {
          "colour": "#1976d2",
          "name": "Medium-High",
          "thresholds": [],
        },
      },
      {
        "data": [],
        "info": {
          "colour": "#0d47a1",
          "name": "High",
          "thresholds": [],
        },
      },
    ],
    "xAxisCategories": [
      {
        "id": "",
        "info": {
          "tooltip": {
            "properties": [
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "disease",
                "testValue": "normal",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "cultivar",
                "testValue": "Shanqui Red",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism",
                "testValue": "Sorghum bicolor",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism part",
                "testValue": "root system",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "age",
                "testValue": "28 day",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "genotype",
                "testValue": "wild type genotype",
              },
            ],
            "replicates": 2,
          },
          "trackId": "g2",
        },
        "label": "Shanqui Red; 28 day",
      },
      {
        "id": "",
        "info": {
          "tooltip": {
            "properties": [
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "disease",
                "testValue": "normal",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "cultivar",
                "testValue": "Shanqui Red",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism",
                "testValue": "Sorghum bicolor",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism part",
                "testValue": "root system",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "age",
                "testValue": "35 day",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "genotype",
                "testValue": "wild type genotype",
              },
            ],
            "replicates": 2,
          },
          "trackId": "g4",
        },
        "label": "Shanqui Red; 35 day",
      },
      {
        "id": "",
        "info": {
          "tooltip": {
            "properties": [
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "disease",
                "testValue": "normal",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "cultivar",
                "testValue": "SRN39",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism",
                "testValue": "Sorghum bicolor",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism part",
                "testValue": "root system",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "age",
                "testValue": "28 day",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "genotype",
                "testValue": "wild type genotype",
              },
            ],
            "replicates": 2,
          },
          "trackId": "g1",
        },
        "label": "SRN39; 28 day",
      },
      {
        "id": "",
        "info": {
          "tooltip": {
            "properties": [
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "disease",
                "testValue": "normal",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "cultivar",
                "testValue": "SRN39",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism",
                "testValue": "Sorghum bicolor",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism part",
                "testValue": "root system",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "age",
                "testValue": "35 day",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "genotype",
                "testValue": "wild type genotype",
              },
            ],
            "replicates": 2,
          },
          "trackId": "g3",
        },
        "label": "SRN39; 35 day",
      },
    ],
    "yAxisCategories": [
      {
        "id": "SORBI_3001G000200",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3001G000200",
          "uri": "genes/SORBI_3001G000200",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3001G000200",
        },
        "label": "SORBI_3001G000200",
      },
      {
        "id": "SORBI_3001G193300",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3001G193300",
          "uri": "genes/SORBI_3001G193300",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3001G193300",
        },
        "label": "SORBI_3001G193300",
      },
      {
        "id": "SORBI_3002G272600",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3002G272600",
          "uri": "genes/SORBI_3002G272600",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3002G272600",
        },
        "label": "SORBI_3002G272600",
      },
      {
        "id": "SORBI_3002G323000",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3002G323000",
          "uri": "genes/SORBI_3002G323000",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3002G323000",
        },
        "label": "SORBI_3002G323000",
      },
      {
        "id": "SORBI_3003G110000",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3003G110000",
          "uri": "genes/SORBI_3003G110000",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3003G110000",
        },
        "label": "SORBI_3003G110000",
      },
      {
        "id": "SORBI_3003G395300",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3003G395300",
          "uri": "genes/SORBI_3003G395300",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3003G395300",
        },
        "label": "SORBI_3003G395300",
      },
      {
        "id": "SORBI_3004G264400",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3004G264400",
          "uri": "genes/SORBI_3004G264400",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3004G264400",
        },
        "label": "SORBI_3004G264400",
      },
      {
        "id": "SORBI_3004G339000",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3004G339000",
          "uri": "genes/SORBI_3004G339000",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3004G339000",
        },
        "label": "SORBI_3004G339000",
      },
      {
        "id": "SORBI_3004G339100",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3004G339100",
          "uri": "genes/SORBI_3004G339100",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3004G339100",
        },
        "label": "SORBI_3004G339100",
      },
      {
        "id": "SORBI_3004G345700",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3004G345700",
          "uri": "genes/SORBI_3004G345700",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3004G345700",
        },
        "label": "SORBI_3004G345700",
      },
      {
        "id": "SORBI_3005G114400",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3005G114400",
          "uri": "genes/SORBI_3005G114400",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3005G114400",
        },
        "label": "SORBI_3005G114400",
      },
      {
        "id": "SORBI_3006G050000",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3006G050000",
          "uri": "genes/SORBI_3006G050000",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3006G050000",
        },
        "label": "SORBI_3006G050000",
      },
      {
        "id": "SORBI_3007G179800",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3007G179800",
          "uri": "genes/SORBI_3007G179800",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3007G179800",
        },
        "label": "SORBI_3007G179800",
      },
      {
        "id": "SORBI_3K044407",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3K044407",
          "uri": "genes/SORBI_3K044407",
          "url": "https://data.sorghumbase.org/auth_testing/gxa/genes/SORBI_3K044407",
        },
        "label": "SORBI_3K044407",
      },
    ],
  },
  "orderings": [
    {
      "columns": [
        0,
        1,
        2,
        3,
      ],
      "name": "Default",
      "rows": [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
      ],
    },
  ],
}
`;

exports[`loadChartData > Paralogs differential (E-GEOD-30249) > matches the golden snapshot 1`] = `
{
  "anatomogramConfig": {
    "anatomogramData": undefined,
    "atlasUrl": "https://data.sorghumbase.org/auth_testing/gxa/",
    "expressedTissueColour": "gray",
    "hoveredTissueColour": "red",
    "show": false,
  },
  "colourAxis": {
    "dataClasses": [
      {
        "color": "#0000FF",
        "from": -1.7,
        "to": -1.7,
      },
      {
        "color": "#8CC6FF",
        "from": -0.3,
        "to": -0.3,
      },
      {
        "color": "#DCDCDC",
        "from": 0,
        "to": 0,
      },
      {
        "color": "#E9967A",
        "from": 0.3,
        "to": 0.3,
      },
    ],
    "unit": "Log2 fold change",
  },
  "columnGroups": {
    "categories": [
      {
        "disabled": false,
        "name": "All",
      },
      {
        "disabled": false,
        "name": "None",
      },
    ],
    "categoryCheckboxes": [
      {
        "disabled": true,
        "name": "High up",
      },
      {
        "disabled": false,
        "name": "Up",
      },
      {
        "disabled": true,
        "name": "Below cutoff",
      },
      {
        "disabled": false,
        "name": "Down",
      },
      {
        "disabled": false,
        "name": "High down",
      },
    ],
    "data": [
      {
        "categories": [
          "All",
          "High down",
          "Down",
        ],
        "groupings": [],
        "value": "compound: sodium hydroxide 0.2 molar vs abscisic acid 20 micromolar in organism part: root",
      },
      {
        "categories": [
          "All",
          "Up",
        ],
        "groupings": [],
        "value": "compound: water vs polyethylene glycol 20 percent in organism part: root",
      },
    ],
    "groupingNames": [],
  },
  "geneSpecificResults": null,
  "heatmapConfig": {
    "atlasUrl": "https://data.sorghumbase.org/auth_testing/gxa/",
    "coexpressionsAvailable": false,
    "description": [
      "Experiment accession: E-GEOD-30249",
      "RNA-Seq of Sorghum bicolor 9d seedlings in response to osmotic stress and abscisic acid",
      "Gene query: []",
    ],
    "disclaimer": "",
    "experiment": {
      "accession": "E-GEOD-30249",
      "description": "RNA-Seq of Sorghum bicolor 9d seedlings in response to osmotic stress and abscisic acid",
      "species": "Sorghum bicolor",
      "type": "rnaseq_mrna_differential",
      "urls": {
        "download": "https://www.ebi.ac.uk/gxa/experiments-content/E-GEOD-30249/download/RNASEQ_MRNA_DIFFERENTIAL?geneQuery=%5B%5D&unit=FOLD_CHANGE&cutoff=0.05&heatmapMatrixSize=50&selectedColumnIds=&type=RNASEQ_MRNA_DIFFERENTIAL",
        "genome_browsers": "https://www.ebi.ac.uk/gxa/experiments/E-GEOD-30249/redirect/genome-browsers",
        "main_page": "https://www.ebi.ac.uk/gxa/experiments/E-GEOD-30249?geneQuery=%255B%255D",
      },
    },
    "genomeBrowsers": [
      "Ensembl Genomes",
    ],
    "inProxy": "",
    "introductoryMessage": "Showing 2 genes:",
    "isBaseline": false,
    "isDifferential": true,
    "isMultiExperiment": false,
    "isWidget": true,
    "linkTarget": "_blank",
    "outProxy": "",
    "shortDescription": "E-GEOD-30249",
    "showControlMenu": true,
    "urlFor": [Function],
    "xAxisLegendName": "Experimental condition",
    "yAxisLegendName": "Gene name",
  },
  "heatmapData": {
    "dataSeries": [
      {
        "data": [
          {
            "info": {
              "foldChange": -1.7,
              "pValue": 1.48769027960814e-26,
              "tStat": undefined,
              "unit": "Log2 fold change",
            },
            "value": -1.7,
            "x": 0,
            "y": 1,
          },
        ],
        "info": {
          "colour": "#0000ff",
          "name": "High down",
        },
      },
      {
        "data": [
          {
            "info": {
              "foldChange": -0.3,
              "pValue": 0.023848945245277,
              "tStat": undefined,
              "unit": "Log2 fold change",
            },
            "value": -0.3,
            "x": 0,
            "y": 0,
          },
        ],
        "info": {
          "colour": "#8cc6ff",
          "name": "Down",
        },
      },
      {
        "data": [],
        "info": {
          "colour": "gainsboro",
          "name": "Below cutoff",
        },
      },
      {
        "data": [
          {
            "info": {
              "foldChange": 0.3,
              "pValue": 0.00251968357307113,
              "tStat": undefined,
              "unit": "Log2 fold change",
            },
            "value": 0.3,
            "x": 1,
            "y": 1,
          },
        ],
        "info": {
          "colour": "#e9967a",
          "name": "Up",
        },
      },
      {
        "data": [],
        "info": {
          "colour": "#b22222",
          "name": "High up",
        },
      },
    ],
    "xAxisCategories": [
      {
        "id": "g5_g1",
        "info": {
          "tooltip": {
            "contrastDescription": "compound: sodium hydroxide 0.2 molar vs abscisic acid 20 micromolar in organism part: root",
            "experimentDescription": "RNA-Seq of Sorghum bicolor 9d seedlings in response to osmotic stress and abscisic acid",
            "properties": [
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "cultivar",
                "referenceValue": "BTx623",
                "testValue": "BTx623",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism",
                "referenceValue": "Sorghum bicolor",
                "testValue": "Sorghum bicolor",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "organism part",
                "referenceValue": "root",
                "testValue": "root",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "age",
                "referenceValue": "9 day",
                "testValue": "9 day",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "developmental stage",
                "referenceValue": "seedling",
                "testValue": "seedling",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "organism part",
                "referenceValue": "root",
                "testValue": "root",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "compound",
                "referenceValue": "sodium hydroxide 0.2 molar",
                "testValue": "abscisic acid 20 micromolar",
              },
            ],
            "referenceReplicates": 3,
            "testReplicates": 3,
          },
          "trackId": "g5_g1",
        },
        "label": "compound: sodium hydroxide 0.2 molar vs abscisic acid 20 micromolar in organism part: root",
      },
      {
        "id": "g7_g3",
        "info": {
          "tooltip": {
            "contrastDescription": "compound: water vs polyethylene glycol 20 percent in organism part: root",
            "experimentDescription": "RNA-Seq of Sorghum bicolor 9d seedlings in response to osmotic stress and abscisic acid",
            "properties": [
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "cultivar",
                "referenceValue": "BTx623",
                "testValue": "BTx623",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "organism",
                "referenceValue": "Sorghum bicolor",
                "testValue": "Sorghum bicolor",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "organism part",
                "referenceValue": "root",
                "testValue": "root",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "age",
                "referenceValue": "9 day",
                "testValue": "9 day",
              },
              {
                "contrastPropertyType": "SAMPLE",
                "propertyName": "developmental stage",
                "referenceValue": "seedling",
                "testValue": "seedling",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "organism part",
                "referenceValue": "root",
                "testValue": "root",
              },
              {
                "contrastPropertyType": "FACTOR",
                "propertyName": "compound",
                "referenceValue": "water",
                "testValue": "polyethylene glycol 20 percent",
              },
            ],
            "referenceReplicates": 3,
            "testReplicates": 3,
          },
          "trackId": "g7_g3",
        },
        "label": "compound: water vs polyethylene glycol 20 percent in organism part: root",
      },
    ],
    "yAxisCategories": [
      {
        "id": "SORBI_3001G000200",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3001G000200",
          "uri": "https://www.ebi.ac.uk/gxa/genes/SORBI_3001G000200",
          "url": "https://www.ebi.ac.uk/gxa/genes/SORBI_3001G000200",
        },
        "label": "SORBI_3001G000200",
      },
      {
        "id": "SORBI_3001G000400",
        "info": {
          "designElement": "",
          "experimentType": undefined,
          "trackId": "SORBI_3001G000400",
          "uri": "https://www.ebi.ac.uk/gxa/genes/SORBI_3001G000400",
          "url": "https://www.ebi.ac.uk/gxa/genes/SORBI_3001G000400",
        },
        "label": "SORBI_3001G000400",
      },
    ],
  },
  "orderings": [
    {
      "columns": [
        0,
        1,
      ],
      "name": "Default",
      "rows": [
        0,
        1,
      ],
    },
  ],
}
`;
